# Futurisys_ML_API

./: .gitignore  Dockerfile  README.md  Rapport_de_couverture.txt  coverage.xml  deploy_to_hf.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
App/: database.py  main.py  model.py  predict.py  schemas.py
App/model/: mapping_classes.json  modele_final_xgb.joblib  preprocesseur.joblib  preprocesseur_fitted.joblib  variables_entree.json
scripts/: create_tables.py  dataset_final.csv  insert_dataset.py
tests/: sample_payload.py  test_api.py
tests/fonctionnel/: test_db_disabled.py  test_model_end_to_end.py  test_predict_endpoint.py
tests/units/: test_app.py  test_model_loading.py
